# cpp-sim-twocrypto

./: .gitattributes  .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: stableswap_math.hpp  stableswap_math_d.hpp  stableswap_math_i.hpp  twocrypto.hpp  twocrypto_d.hpp  twocrypto_i.hpp
cpp/src/: arb_harness.cpp  arb_harness_idr.cpp  benchmark_harness.cpp  benchmark_harness_d.cpp  benchmark_harness_i.cpp  stableswap_math.cpp  stableswap_math_capi.cpp  stableswap_math_i.cpp  twocrypto.cpp  twocrypto_d.cpp  twocrypto_i.cpp
cpp_2/: CMakeLists.txt  example_pools.json
cpp_2/src/: arb_harness.cpp  arbitrageur.hpp  pool_runner.hpp  real_type.hpp  trader.hpp
cpp_2/twocrypto-fx/include/: stableswap_math.hpp  twocrypto.hpp
python/: README.md  pyproject.toml
python/arb_sim/: add_geometric_mean.py  arb_sim.py  compare_plots.py  compare_sims.py  generate_pools.py  generate_pools_brl.py  generate_pools_btc.py  generate_pools_btc_old.py  generate_pools_chf.py  generate_pools_eur.py  generate_pools_generic.py  generate_pools_idr.py  generate_pools_ngn.py  generate_pools_php.py  generate_pools_try.py  generate_pools_xau.py  generate_trades.py  plot_candles.py  plot_diffs.py  plot_heatmap.py  pool_helpers.py
python/arb_sim/param_search_results/brlusd/: notes.md
python/arb_sim/param_search_results/brlusd/opt_bps/: notes.md
python/arb_sim/param_search_results/chfusd/: log.md  readme_draft.md
python/arb_sim/param_search_results/chfusd/0.A-mid_fee don sweep/: generate_pools_chf.py
python/arb_sim/param_search_results/eurjpy/: notes.md
python/arb_sim/param_search_results/eurusd/: logs.md
python/arb_sim/param_search_results/idrusd/: idr_statistical_summary.json  idr_statistical_summary.md  idr_statistical_summary_corrected.json  idr_statistical_summary_corrected.md  logs.md  notes.md
python/arb_sim/param_search_results/idrusd/1_A_mid_fee_wide_logspace_sweeps/: log.md
python/arb_sim/param_search_results/idrusd/1_A_vs_mid_fee_log_20251016_130000/: arb_run_1.json  pool_config.json
python/arb_sim/param_search_results/idrusd/2_A_vs_donation_apy_log_20251016_142434/: arb_run_1.json  pool_config.json
python/arb_sim/param_search_results/idrusd/3_A_vs_ma_time_log_20251016_142546/: arb_run_1.json  pool_config.json
python/arb_sim/param_search_results/idrusd/4_A_vs_fee_gamma_log_20251016_142756/: arb_run_1.json  pool_config.json
python/arb_sim/param_search_results/ngnusd/: notes.md
python/arb_sim/param_search_results/ngnusd/1_A_mid_fee_wide_logspace_sweeps/: log.md
python/arb_sim/param_search_results/phpusd/: notes.md
python/arb_sim/param_search_results/phpusd/1_A_mid_fee_wide_logspace_sweeps/: log.md
python/arb_sim/param_search_results/tryusd/: notes.md
python/arb_sim/param_search_results/usdchf/: readme_draft.md
python/arb_sim/param_search_results/usdphp/: notes.md
python/arb_sim/param_search_results/xauusd/: logs.md
python/arb_sim/trade_data/: process_series.py
python/arb_sim/trade_data/btcusd/: btc-2023-2025.json  btcusd-events.json  btcusdt-2023-2025.json  btcusdt-2025.json  fetch_binance.py  process.py  raw_fetched.json  synth-1m.json  train-1y-1672534920-btcusd.json
python/arb_sim/trade_data/chfusd/: chfusd-2015-2020.json  chfusd-2020-2025.json  chfusd-2020-latest.json
python/arb_sim/trade_data/ethusd/: ethusd-1m.json  fetch_binance.py
python/arb_sim/trade_data/eurjpy/: eurjpy-20200101-20250901.json
python/arb_sim/trade_data/eurusd/: eurusd-2020-2025.json
python/arb_sim/trade_data/idrusd/: 1_idrusd_json_original.json  2_idrusd_json_converted.json  3_idrusd_json_cleaned.json  idrusd-1m.json
python/arb_sim/trade_data/ngnusd/: 1_ngnusd_csv_original.csv  2_ngnusd_json_converted.json  3_ngnusd_json_cleaned.json
python/arb_sim/trade_data/phpusd/: 1_phpusd_csv_original.csv  2_phpusd_json_converted.json  3_phpusd_json_cleaned.json
python/arb_sim/trade_data/tryusd/: tryusd-2020-latest.json
python/arb_sim/trade_data/usdngn/: ngnusd-1m.json
python/arb_sim/trade_data/usdphp/: csv_to_json.py  filter.py  flip.py  phpusd-1m.json  usdphp-1m.filtered.json  usdphp-1m.flipped.json  usdphp-1m.raw.json
python/arb_sim/trade_data/xauusd/: xauusd-2020-latest.json
python/benchmark/: __init__.py  benchmark_results.json  builder.py  c_benchmark.py  check_precision.py  comparison.py  cpp_benchmark.py  precision_check_results.json  run_benchmark.py  test_cases.json  test_generator.py  vyper_benchmark.py
python/benchmark_math/: main.py  results.json  test_cases.json
python/benchmark_pool/: README.md  arb_actions_to_sequence.py  generate_data.py  run_cpp_variants.py  run_full_benchmark.py
python/benchmark_pool/debug/: inspect_context.py  parse_and_diff.py  variants_diff.py
python/cpp_pool/: cpp_pool_runner.py  cpp_pool_runner_d.py  cpp_pool_runner_i.py
python/vyper_pool/: vyper_pool_runner.py
